--- a/vitrine/style2.css
+++ b/vitrine/style2.css
@@ -31,6 +31,8 @@ h1 {
 }
 .flex{
     display: flex;
+    align-items: center;
+    gitjustify-content: center; 
 }
 .container {
     
@@ -41,6 +43,7 @@ h1 {
   width: 100%;
   padding: 3rem 3rem 0;
   border-radius: 1px;
+  min-height: 420px;
 }
 .container::before {
   content: '';
