--- a/vitrine/style2.css
+++ b/vitrine/style2.css
@@ -32,7 +32,7 @@ h1 {
 .flex{
     display: flex;
     align-items: center;
-    gitjustify-content: center; 
+    justify-content: center; 
 }
 .container {
     
